--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Documento nuevo</title>
 </head>
 <body>
-    
+    <h1>Titulo</h1>
+    <h2>Subtitulo</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
 </body>
 </html>
